--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ h1, h3, p{
 
 .chart{
     background-color: white;
-    width:auto;
+    width: 500px;
     border-width: 10px;
     border-style: solid;
     border-radius: 5px;
