--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ h1 {
     font-size: 40px;
     margin-top: 20px;
     font-weight: bold;
-    text-align: left;
+    text-align: center;
 }
 
 h2 {
@@ -40,7 +40,7 @@ h2 {
     font-size: 40px;
     margin-top: 20px;
     font-weight: bold;
-    text-align: left;
+    text-align: center;
 }
 
 /*-----------------------------------Charts-------------------------------------*/
@@ -83,11 +83,11 @@ h2 {
   cursor: pointer;
   display: flex;
   align-self: center;
-  font-size: 1rem;
+  font-size: 25px;
   font-weight: 400;
   line-height: 1;
   margin: 20px;
-  padding: 1.2em 2.8em;
+  padding: 5px 12px;
   text-decoration: none;
   text-align: center;
   text-transform: uppercase;
