--- a/index.css
+++ b/index.css
@@ -7,15 +7,17 @@
 
 body {
     background-color: #ccdbfd;
-    max-width: 90%;
+    max-width: auto;
     margin: auto;
+    text-align: center;
+    width: 100%;
 }
-
+   
 .bodyText {
   color: black;
-  margin-bottom: -22px;
+  margin-bottom: 22px;
   margin-top: 50px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Railway', sans-serif;
   font-size: 18px;
   font-weight: lighter;
   text-align: center;
@@ -47,6 +49,8 @@ h2 {
 .chart {
 	background-color: white;
 	width: auto;
+	align-items: center;
+    	justify-content: center;
   	position:static;
 	margin-left: 10px;
 	margin-top: 10px;
@@ -87,11 +91,11 @@ h2 {
   font-weight: 400;
   line-height: 1;
   margin: 20px;
-  padding: 5px 12px;
+  padding: 12px 12px;
   text-decoration: none;
   text-align: center;
   text-transform: uppercase;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Railway', sans-serif;
   font-weight: 700;
 
   &:hover,
