--- a/index.css
+++ b/index.css
@@ -27,6 +27,12 @@ body {
     display: grid;
 }
 
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 /*-----------------------------------Headings-------------------------------------*/
 
 h1 {
@@ -52,6 +58,7 @@ h3 {
     font-weight: bold;
     text-align: center;
 }
+
 /*-----------------------------------Charts-------------------------------------*/
 .chart {
 	background-color: white;
@@ -76,20 +83,19 @@ h3 {
   
 }
 
-
 /*-----------------------------------Buttons-------------------------------------*/
 .buttons {
   display:flex;
   justify-content:center;
-  margin-bottom: 10px;
-  margin-top: 10px;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
 .button {
   box-sizing: border-box;
   appearance: none;
   background-color: transparent;
   border: 2px solid $green;
-  border-radius: 0.6em;
+  border-radius: 30px;
   color: $green;
   cursor: pointer;
   display: flex;
@@ -112,7 +118,7 @@ h3 {
 	  
   transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
   &:hover {
-  box-shadow: 0 0 40px 40px $red inset;
+  box-shadow: 0 0 60px 60px $green inset;
   }
 }
 
