--- a/index.css
+++ b/index.css
@@ -27,11 +27,25 @@ body {
     display: grid;
 }
 
-.container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.ncontainer {
+	align-content: center;
+	display: flex;
+	justify-content: center;
+	flex-flow: row wrap;
+	border-style: solid;
+	left: 120px;
+  	width: 80%;
+	margin-top: 20%
+	margin-bottom: 20%
+  	text-align: center;
+  	border: 3px solid rgb(5, 0, 0);
+	border-radius: 3px;
+	border-color: white;
+	padding: 30px;
+
 }
+
+
 
 /*-----------------------------------Headings-------------------------------------*/
 
