--- a/index.css
+++ b/index.css
@@ -33,7 +33,6 @@ body {
 	justify-content: center;
 	flex-flow: row wrap;
 	border-style: solid;
-	left: 120px;
   	width: 80%;
 	margin-top: 20%
 	margin-bottom: 20%
@@ -107,7 +106,7 @@ h3 {
 .button {
   box-sizing: border-box;
   appearance: none;
-  background-color: transparent;
+  background-color: #ffe66d;
   border: 2px solid $green;
   border-radius: 30px;
   color: $green;
@@ -116,7 +115,7 @@ h3 {
   align-self: center;
   font-size: 25px;
   font-weight: 400;
-  line-height: 1;
+  line-height: 100px;
   margin: 20px;
   padding: 12px 12px;
   text-decoration: none;
@@ -128,7 +127,7 @@ h3 {
   &:hover,
   &:focus {
     color: #fff;
-    outline: 0;
+    outline: 10px;
 	  
   transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
   &:hover {
