--- a/index.css
+++ b/index.css
@@ -32,15 +32,16 @@ body {
 	display: flex;
 	justify-content: center;
 	flex-flow: row wrap;
-	border-style: solid;
+	position: relative;
+  	left: 120px;
   	width: 80%;
 	margin-top: 20%
 	margin-bottom: 20%
   	text-align: center;
-  	border: 3px solid rgb(5, 0, 0);
-	border-radius: 3px;
-	border-color: white;
-	padding: 30px;
+  	border: 3px solid rgb(255, 255, 255);
+  	border-top: none;
+  	border-left: none;
+  	border-right: none;
 
 }
 
