--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@ body {
   	border-top: none;
   	border-left: none;
   	border-right: none;
+	padding: 30px;
 
 }
 
@@ -50,7 +51,8 @@ body {
 /*-----------------------------------Headings-------------------------------------*/
 
 h1 {
-    color: rgb(0, 51, 153); 
+    color: rgb(0, 51, 153);
+    font-family: 'Raleway', sans-serif;
     font-size: 40px;
     margin-top: 20px;
     font-weight: bold;
@@ -58,7 +60,8 @@ h1 {
 }
 
 h2 {
-    color: rgb(0, 102, 102); 
+    color: rgb(0, 102, 102);
+    font-family: 'Raleway', sans-serif;
     font-size: 40px;
     margin-top: 20px;
     font-weight: bold;
@@ -66,7 +69,8 @@ h2 {
 }
 
 h3 {
-    color: rgb(0, 102, 102); 
+    color: rgb(0, 102, 102);
+    font-family: 'Raleway', sans-serif;
     font-size: 20px;
     margin-top: 20px;
     font-weight: bold;
