--- a/index.css
+++ b/index.css
@@ -102,39 +102,72 @@ h3 {
 }
 
 /*-----------------------------------Buttons-------------------------------------*/
-
-.button {
-  box-sizing: border-box;
-  appearance: none;
-  background-color: #ffe66d;
-  border: 2px solid $green;
-  border-radius: 30px;
-  color: $green;
-  cursor: pointer;
+.btn-holder {
   display: flex;
-  align-self: center;
-  font-size: 25px;
-  font-weight: 400;
-  line-height: 100px;
-  margin: 20px;
-  padding: 12px 12px;
-  text-decoration: none;
-  text-align: center;
-  text-transform: uppercase;
-  font-family: 'Railway', sans-serif;
-  font-weight: 700;
-
-  &:hover,
-  &:focus {
-    color: #fff;
-    outline: 10px;
-	  
-  transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
-  &:hover {
-  box-shadow: 0 0 60px 60px $green inset;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1000px;
+  margin: 10px auto 35px;
+}
+.btn {
+  position: relative;
+  display: inline-block;
+  width: auto; height: auto;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  margin: 0px 25px 15px;
+  min-width: 150px;
+}
+  .btn span {         
+    position: relative;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    top: 0; left: 0;
+    width: 100%;
+    padding: 15px 20px;
+    transition: 0.3s;
   }
+
+.btn.hover-border-11::before,
+.btn.hover-border-11::after {
+  width: 100%; height: 2px;
+  background-color: rgb(54, 56, 55);
+  z-index: 2;
+  transition: 0.35s; 
+}
+.btn.hover-border-11::before {
+  top: 0; right: 0;
+}
+.btn.hover-border-11::after {
+  bottom: 0; left: 0;
+}
+.btn.hover-border-11:hover::before,
+.btn.hover-border-11:hover::after {
+  width: 0%;
+  transition: 0.2s 0.2s ease-out; 
 }
 
+.btn.hover-border-11 span::before,
+.btn.hover-border-11 span::after {
+  width: 2px; height: 100%;
+  background-color: rgb(54, 56, 55);
+  z-index: 2;
+  transition: 0.25s; 
+}
+.btn.hover-border-11 span::before {
+  bottom: 0; right: -2px;
+}
+.btn.hover-border-11 span::after {
+  top: 0; left: -2px;
+}
+.btn.hover-border-11 span:hover::before,
+.btn.hover-border-11 span:hover::after {
+  height: 0%;
+}
 
 
 
