--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 body {
-    background-color: #ccdbfd;
+    background-color: rgb(62, 86, 34);
     max-width: auto;
     margin: auto;
     text-align: center;
