--- a/project.css
+++ b/project.css
@@ -1,9 +1,174 @@
-.chart{
-    background-color: #FeFeF8;
-    width: auto;
+/* ECON30006: Data Visualisation Portfolio CSS style file */
+
+/*-----------------------------------Fonts-------------------------------------*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+body {
+    background-color: rgb(233, 241, 247);
+    max-width: auto;
     margin: auto;
-    border-width: 10px;
-    border-style: solid;
-    border-radius: 5px;
-    border-color: #FeFeF8;
+    text-align: center;
+    width: 100%;
 }
+   
+.bodyText {
+  color: black;
+  margin-bottom: 22px;
+  margin-top: 50px;
+  font-family: 'Railway', sans-serif;
+  font-size: 18px;
+  font-weight: lighter;
+  text-align: center;
+}
+
+.pagecontainer {
+    display: grid;
+}
+
+.ncontainer {
+	align-content: center;
+	display: flex;
+	justify-content: center;
+	flex-flow: row wrap;
+	position: relative;
+  	left: 120px;
+  	width: 80%;
+	margin-top: 20%
+	margin-bottom: 20%
+  	text-align: center;
+  	border: 3px solid rgb(255, 255, 255);
+  	border-top: none;
+  	border-left: none;
+  	border-right: none;
+	padding: 30px;
+
+}
+/*-----------------------------------Navigation Bar-------------------------------------*/
+
+/* Collapsing Navbar Styles */
+
+
+
+/*-----------------------------------Headings-------------------------------------*/
+
+h1 {
+    color: black;
+    font-family: 'Raleway', sans-serif;
+    font-size: 70px;
+    margin-top: 20px;
+    font-weight: bold;
+    text-align: center;
+}
+
+h2 {
+    color: black;
+    font-family: 'Raleway', sans-serif;
+    font-size: 15px;
+    margin-top: 5px;
+    font-weight: bold;
+    text-align: center;
+}
+
+h3 {
+    color: rgb(0, 102, 102);
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    margin-top: 20px;
+    font-weight: bold;
+    text-align: center;
+}
+
+/*-----------------------------------Charts-------------------------------------*/
+.chart {
+	background-color: white;
+	width: auto;
+	align-items: center;
+    	justify-content: center;
+  	position:static;
+	margin-left: 10px;
+	margin-top: 10px;
+	padding: 5px;
+	border-width: 3px;
+  	border-style: solid;
+  	border-radius: 15px;
+  	border-color: rgb(0, 102, 102);
+	flex-flow: row wrap;
+}
+
+
+.chart:hover {
+  	transform: scale(1.035, 1.035);
+ 	transition: 0.8s;
+  
+}
+
+/*-----------------------------------Buttons-------------------------------------*/
+.btn-holder {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1000px;
+  margin: 10px auto 35px;
+}
+.btn {
+  position: relative;
+  display: inline-block;
+  width: auto; height: auto;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  margin: 0px 25px 15px;
+  min-width: 150px;
+}
+  .btn span {         
+    position: relative;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    top: 0; left: 0;
+    width: 100%;
+    padding: 15px 20px;
+    transition: 0.3s;
+  }
+
+.btn.hover-border-11::before,
+.btn.hover-border-11::after {
+  width: 100%; height: 2px;
+  background-color: rgb(54, 56, 55);
+  z-index: 2;
+  transition: 0.35s; 
+}
+.btn.hover-border-11::before {
+  top: 0; right: 0;
+}
+.btn.hover-border-11::after {
+  bottom: 0; left: 0;
+}
+.btn.hover-border-11:hover::before,
+.btn.hover-border-11:hover::after {
+  width: 0%;
+  transition: 0.2s 0.2s ease-out; 
+}
+
+.btn.hover-border-11 span::before,
+.btn.hover-border-11 span::after {
+  width: 2px; height: 100%;
+  background-color: rgb(54, 56, 55);
+  z-index: 2;
+  transition: 0.25s; 
+}
+.btn.hover-border-11 span::before {
+  bottom: 0; right: -2px;
+}
+.btn.hover-border-11 span::after {
+  top: 0; left: -2px;
+}
+.btn.hover-border-11 span:hover::before,
+.btn.hover-border-11 span:hover::after {
+  height: 0%;
+}
+
+
