--- a/project.css
+++ b/project.css
@@ -104,71 +104,260 @@ h3 {
 }
 
 /*-----------------------------------Buttons-------------------------------------*/
-.btn-holder {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  max-width: 1000px;
-  margin: 10px auto 35px;
-}
-.btn {
-  position: relative;
-  display: inline-block;
-  width: auto; height: auto;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  margin: 0px 25px 15px;
-  min-width: 150px;
-}
-  .btn span {         
-    position: relative;
-    display: inline-block;
-    font-size: 14px;
-    font-weight: bold;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    top: 0; left: 0;
-    width: 100%;
-    padding: 15px 20px;
-    transition: 0.3s;
-  }
 
-.btn.hover-border-11::before,
-.btn.hover-border-11::after {
-  width: 100%; height: 2px;
-  background-color: rgb(54, 56, 55);
-  z-index: 2;
-  transition: 0.35s; 
-}
-.btn.hover-border-11::before {
-  top: 0; right: 0;
-}
-.btn.hover-border-11::after {
-  bottom: 0; left: 0;
-}
-.btn.hover-border-11:hover::before,
-.btn.hover-border-11:hover::after {
-  width: 0%;
-  transition: 0.2s 0.2s ease-out; 
-}
+    
+    .button, .buttonActive {
+      border: 2px solid rgb(187, 39, 180);
+      color: rgb(116, 18, 99);
+      font-family: 'Raleway', sans-serif;
+      line-height: 16px;
+      font-weight: 600;
+      border-radius: 350px;
+      box-sizing: content-box;
+      align-items: flex-start;
+      display: inline-block;
+      font-size: 18px; 
+      margin: 1px 2px 1px 2px;
+      text-decoration: none;
+      max-width: 100px;
+      outline-offset: 2px;
+      overflow: hidden;
+      padding: 5px 12px;
+      text-align: center;
+      text-overflow: ellipsis;
+      transition: border-color,background-color .3s ease;
+     }
+    
+    .buttonActive {
+      color: #2d1247;
+      color: rgb(253, 249, 252) !important;
+      background-color: rgb(141, 22, 131) !important;
+    }
+    
+    @-webkit-keyframes edit {
+      0% {
+        -webkit-transform: rotate(-12deg);
+        transform: rotate(-12deg);
+      }
+    
+      8% {
+        -webkit-transform: rotate(12deg);
+        transform: rotate(12deg);
+      }
+    
+      10% {
+        -webkit-transform: rotate(24deg);
+        transform: rotate(24deg);
+      }
+    
+      18% {
+        -webkit-transform: rotate(-24deg);
+        transform: rotate(-24deg);
+      }
+    
+      20% {
+        -webkit-transform: rotate(-24deg);
+        transform: rotate(-24deg);
+      }
+    
+      28% {
+        -webkit-transform: rotate(24deg);
+        transform: rotate(24deg);
+      }
+    
+      30% {
+        -webkit-transform: rotate(24deg);
+        transform: rotate(24deg);
+      }
+    
+      38% {
+        -webkit-transform: rotate(-24deg);
+        transform: rotate(-24deg);
+      }
+    
+      40% {
+        -webkit-transform: rotate(-24deg);
+        transform: rotate(-24deg);
+      }
+    
+      48% {
+        -webkit-transform: rotate(24deg);
+        transform: rotate(24deg);
+      }
+    
+      50% {
+        -webkit-transform: rotate(24deg);
+        transform: rotate(24deg);
+      }
+    
+      58% {
+        -webkit-transform: rotate(-24deg);
+        transform: rotate(-24deg);
+      }
+    
+      60% {
+        -webkit-transform: rotate(-24deg);
+        transform: rotate(-24deg);
+      }
+    
+      68% {
+        -webkit-transform: rotate(24deg);
+        transform: rotate(24deg);
+      }
+    
+      75% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+      }
+    }
+    
+    @keyframes edit {
+      0% {
+        -webkit-transform: rotate(-12deg);
+        -ms-transform: rotate(-12deg);
+        transform: rotate(-12deg);
+      }
+    
+      8% {
+        -webkit-transform: rotate(12deg);
+        -ms-transform: rotate(12deg);
+        transform: rotate(12deg);
+      }
+    
+      10% {
+        -webkit-transform: rotate(24deg);
+        -ms-transform: rotate(24deg);
+        transform: rotate(24deg);
+      }
+    
+      18% {
+        -webkit-transform: rotate(-24deg);
+        -ms-transform: rotate(-24deg);
+        transform: rotate(-24deg);
+      }
+    
+      20% {
+        -webkit-transform: rotate(-24deg);
+        -ms-transform: rotate(-24deg);
+        transform: rotate(-24deg);
+      }
+    
+      28% {
+        -webkit-transform: rotate(24deg);
+        -ms-transform: rotate(24deg);
+        transform: rotate(24deg);
+      }
+    
+      30% {
+        -webkit-transform: rotate(24deg);
+        -ms-transform: rotate(24deg);
+        transform: rotate(24deg);
+      }
+    
+      38% {
+        -webkit-transform: rotate(-24deg);
+        -ms-transform: rotate(-24deg);
+        transform: rotate(-24deg);
+      }
+    
+      40% {
+        -webkit-transform: rotate(-24deg);
+        -ms-transform: rotate(-24deg);
+        transform: rotate(-24deg);
+      }
+    
+      48% {
+        -webkit-transform: rotate(24deg);
+        -ms-transform: rotate(24deg);
+        transform: rotate(24deg);
+      }
+    
+      50% {
+        -webkit-transform: rotate(24deg);
+        -ms-transform: rotate(24deg);
+        transform: rotate(24deg);
+      }
+    
+      58% {
+        -webkit-transform: rotate(-24deg);
+        -ms-transform: rotate(-24deg);
+        transform: rotate(-24deg);
+      }
+    
+      60% {
+        -webkit-transform: rotate(-24deg);
+        -ms-transform: rotate(-24deg);
+        transform: rotate(-24deg);
+      }
+    
+      68% {
+        -webkit-transform: rotate(24deg);
+        -ms-transform: rotate(24deg);
+        transform: rotate(24deg);
+      }
+    
+      75% {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+      }
+    }
 
-.btn.hover-border-11 span::before,
-.btn.hover-border-11 span::after {
-  width: 2px; height: 100%;
-  background-color: rgb(54, 56, 55);
-  z-index: 2;
-  transition: 0.25s; 
-}
-.btn.hover-border-11 span::before {
-  bottom: 0; right: -2px;
-}
-.btn.hover-border-11 span::after {
-  top: 0; left: -2px;
-}
-.btn.hover-border-11 span:hover::before,
-.btn.hover-border-11 span:hover::after {
-  height: 0%;
-}
+    .faa-home.animated,
+      .faa-home.animated-hover:hover,
+      .faa-parent.animated-hover:hover > .faa-home {
+        -webkit-animation: edit 5s ease infinite;
+        animation: edit 5s ease infinite;
+      }
 
+    .faa-edit.animated,
+    .faa-edit.animated-hover:hover,
+    .faa-parent.animated-hover:hover > .faa-edit {
+      -webkit-animation: edit 5s ease infinite;
+      animation: edit 5s ease infinite;
+    }
+    
+    .faa-github.animated,
+    .faa-github.animated-hover:hover,
+    .faa-parent.animated-hover:hover > .faa-github {
+      -webkit-animation: edit 5s ease infinite;
+      animation: edit 5s ease infinite;
+    }
+    
+    .faa-book.animated,
+    .faa-book.animated-hover:hover,
+    .faa-parent.animated-hover:hover > .faa-book {
+      -webkit-animation: edit 5s ease infinite;
+      animation: edit 5s ease infinite;
+    }
+
+    #loader {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      z-index: 1;
+      width: 120px;
+      height: 120px;
+    }
+    
+    #one {
+      position: absolute;
+      border-radius: 50%;
+      background: #FFFFFF;
+      opacity: .0;
+      animation: loading 1.4s .65s infinite;
+      height: 20px;
+      width: 20px;
+    }
+    
+    #two {
+      position: absolute;
+      border-radius: 50%;
+      background: #470447;
+      opacity: .0;
+      animation: loading 1.4s infinite;
+      height: 20px;
+      width: 20px;
+    }
+    
 
