--- a/styles.css
+++ b/styles.css
@@ -161,4 +161,35 @@ h3 {
       width: 20px;
     }
     
+//*------------------------------- Mobile friendly version--------------------------------------- *//
 
+@media only screen and (max-width: 450px) {
+  body {
+    max-width: 98%
+  }
+  .multi-button button {
+    font-size: 1rem;
+  }
+  .chart {
+    min-width: 350px;
+    padding: 10px
+  }
+  .chart:hover {
+    border-color: rgb(224, 70, 8);
+  }
+  .bcontainer {
+    border-style: none;
+    padding: 1px;
+    gap: 10px 10px
+  }
+  .bcontainer-project {
+    border-style: none;
+    padding: 1px;
+    gap: 10px 10px
+  }
+  .bcontainer-project-section4 {
+    border-style: none;
+    padding: 1px;
+    gap: 10px 10px
+  }
+}
