--- a/styles.css
+++ b/styles.css
@@ -87,13 +87,14 @@ h3 {
 	align-items: center;
     	justify-content: center;
   	position:static;
-	margin-left: 10px;
-	margin-top: 10px;
+	margin: 1% 1% 3% 1%;;
 	padding: 5px;
 	border-width: 3px;
   	border-style: solid;
   	border-radius: 15px;
   	border-color: rgb(0, 102, 102);
+	text-align: center !important;
+        padding: 10px;
 	flex-flow: row wrap;
 }
 
