--- a/styles.css
+++ b/styles.css
@@ -57,20 +57,19 @@ h1 {
 
 h2 {
     color: black;
-    font-family: 'Raleway', sans-serif;
-    margin-top: 100px !important;
-    font-size: 25px !important;
-    font-family: 'Raleway', sans-serif !important;
-    margin-left: -200px !important;
+  font-size: 25px;
+  margin-top: -35px;
+  font-weight: lighter;
+  font-family: 'Raleway', sans-serif;
+}
  }
 
 h3 {
-    color: rgb(0, 102, 102);
-    font-family: 'Raleway', sans-serif;
-    margin-top: 100px !important;
-    font-size: 35px !important;
-    font-family: 'Raleway', sans-serif !important;
-    margin-left: -200px !important;
+    color: black;
+  font-size: 35px;
+  margin-top: -35px;
+  font-weight: lighter;
+  font-family: 'Raleway', sans-serif;
  }
 
 /*-----------------------------------Charts-------------------------------------*/
