--- a/styles.css
+++ b/styles.css
@@ -74,20 +74,18 @@ h3 {
 
 /*-----------------------------------Charts-------------------------------------*/
 .chart {
-	background-color: white;
-	width: auto;
-	align-items: center;
-    	justify-content: center;
-  	position:static;
-	margin: 1% 1% 3% 1%;;
-	padding: 5px;
-	border-width: 3px;
-  	border-style: solid;
-  	border-radius: 15px;
-  	border-color: rgb(0, 102, 102);
-	text-align: center !important;
-        padding: 10px;
-	flex-flow: row wrap;
+  background-color: white;
+  border-style: solid;
+  border-color: white;
+  border-width: 3px;
+  border-radius: 25px;
+  text-align: center;
+  padding: 20px;
+  transition: border-radius 400ms, flex-grow 1000ms;
+  width: 45%;
+  min-width: 350px;
+  transition: transform 1000ms;
+  
 }
 
 
