--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,13 @@
 /* ECON30006: Data Visualisation Portfolio CSS style file */
-
 /*-----------------------------------Fonts-------------------------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-
 body {
     background-color: rgb(233, 241, 247);
-    margin: 0;
+    max-width: auto;
+    margin: auto;
     text-align: center;
-    padding: 0;
-    min-height: 100vh;
+    width: 100%;
 }
    
 .bodyText {
@@ -21,33 +19,29 @@ body {
   font-weight: lighter;
   text-align: center;
 }
-
-
 .pagecontainer {
     display: grid;
 }
-
 .ncontainer {
-        display: flow-root;
-        position: relative;
-        left: 120px;
-        width: 80%;
-        text-align: center;
-        border: 3px solid rgb(0, 0, 0);
-        border-top: none;
-        border-left: none;
-        border-right: none;
-      }
-      
-  	
+	align-content: center;
+	display: flex;
+	justify-content: center;
+	flex-flow: row wrap;
+	position: relative;
+  	left: 120px;
+  	width: 80%;
+	margin-top: 20%
+	margin-bottom: 20%
+  	text-align: center;
+  	border: 3px solid rgb(255, 255, 255);
+  	border-top: none;
+  	border-left: none;
+  	border-right: none;
+	padding: 30px;
+}
 /*-----------------------------------Navigation Bar-------------------------------------*/
-
 /* Collapsing Navbar Styles */
-
-
-
 /*-----------------------------------Headings-------------------------------------*/
-
 h1 {
     color: black;
     font-family: 'Raleway', sans-serif;
@@ -56,57 +50,44 @@ h1 {
     font-weight: bold;
     text-align: center;
 }
-
 h2 {
     color: black;
-    font-size: 25px;
-    margin-top: 30px;
-    margin-bottom: 0px;	
-    text-align: center;
-    font-weight: bold;
     font-family: 'Raleway', sans-serif;
+    font-size: 25px;
+    margin-top: 5px;
+    font-weight: bold;
+    text-align: center;
 }
- }
-
 h3 {
-  color: black;
-  font-size: 35px;
-  margin-top: 30px;
-  margin-bottom: 0px;	
-  text-align: center;
-  font-weight: bold;
-  font-family: 'Raleway', sans-serif;
- }
-
+    color: rgb(0, 102, 102);
+    font-family: 'Raleway', sans-serif;
+    font-size: 35px;
+    margin-top: 10px;
+    font-weight: bold;
+    text-align: center;
+}
 /*-----------------------------------Charts-------------------------------------*/
-
-    
-      .chart{
-        width: auto;
-        position:static;
-        border-width: 1px;
-        background-color: rgb(250, 243, 250);
-        border-style: solid;
-        border-radius: 15px;
-        border-color: rgb(250, 243, 250);
-        margin: 1% 1% 3% 1%;;
-        text-align: center !important;
-        padding: 10px;
-       
-        
-        /*5px 50px 25px 200px*/
-      
-      }
-      
-      .chart:hover {
-        transform: scale(1.04, 1.04);
-        transition: 0.6s;
-        
-      }
-
-
+.chart {
+	background-color: white;
+	width: auto;
+	align-items: center;
+    	justify-content: center;
+  	position:static;
+	margin-left: 10px;
+	margin-top: 10px;
+	padding: 5px;
+	border-width: 3px;
+  	border-style: solid;
+  	border-radius: 15px;
+  	border-color: rgb(0, 102, 102);
+	flex-flow: row wrap;
+}
+.chart:hover {
+  	transform: scale(1.035, 1.035);
+ 	transition: 0.8s;
+  
+}
 /*-----------------------------------Buttons-------------------------------------*/
-
     .button{
 	align-content: center;
 	flex-flow: center;
@@ -123,13 +104,11 @@ h3 {
 	transition: color 1s;
 	font-family: 'Raleway', sans-serif;
   }
-
   .button span {
 	cursor: pointer;
 	display: inline-block;
 	position: relative;
 	transition: 0.4s;
-
   }
   
   .button span:after {
@@ -139,9 +118,7 @@ h3 {
 	top: 0;
 	right: -20px;
 	transition: 0.4s;
-
   }
-
   
   .button:hover span {
 	padding-right: 25px;
@@ -151,7 +128,6 @@ h3 {
 	opacity: 1;
 	right: 0;
   }
-
     #two {
       position: absolute;
       border-radius: 50%;
@@ -161,19 +137,7 @@ h3 {
       height: 20px;
       width: 20px;
     }
-    
+
 //*------------------------------- Mobile friendly version--------------------------------------- *//
 
-@media only screen
-and (max-device-width : 800px) { 
 
-.nav {display: none !important;}
-
-}
-
-@media only screen
-and (min-device-width : 800px) { 
-
-.sectional_nav {display: none !important;}
-
-}
